force-app/main/default/objects/Internship__c/Internship__c.object-meta.xml
<CustomObject>
    <label>Internship</label>
    <nameField>
        <label>Internship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Internships</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>