force-app/main/default/objects/Internship__c/fields/DaysLeft__c.field-meta.xml
<CustomField>
    <fullName>DaysLeft__c</fullName>
    <formula>IF(ISBLANK( InternshipApplicationDeadline__c ),Max(0,InternshipStartDate__c - TODAY()),Max(0, InternshipApplicationDeadline__c -TODAY()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DaysLeft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>