force-app/main/default/objects/Internship__c/fields/InternshipApplicationDeadline__c.field-meta.xml
<CustomField>
    <fullName>InternshipApplicationDeadline__c</fullName>
    <label>InternshipApplicationDeadline</label>
    <type>Date</type>
</CustomField>