force-app/main/default/objects/Internship__c/fields/InternshipEndDate__c.field-meta.xml
<CustomField>
    <fullName>InternshipEndDate__c</fullName>
    <label>InternshipEndDate</label>
    <type>Date</type>
</CustomField>