force-app/main/default/objects/Internship__c/fields/InternshipLevel__c.field-meta.xml
<CustomField>
    <fullName>InternshipLevel__c</fullName>
    <label>InternshipLevel</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>WorkingArea__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Easy E1</fullName>
            </value>
            <value>
                <fullName>Easy E2</fullName>
            </value>
            <value>
                <fullName>Easy E3</fullName>
            </value>
            <value>
                <fullName>Easy E4</fullName>
            </value>
            <value>
                <fullName>Easy E5</fullName>
            </value>
            <value>
                <fullName>Intermediate I1</fullName>
            </value>
            <value>
                <fullName>Intermediate I2</fullName>
            </value>
            <value>
                <fullName>Intermediate I3</fullName>
            </value>
            <value>
                <fullName>Intermediate I4</fullName>
            </value>
            <value>
                <fullName>Intermediate I5</fullName>
            </value>
            <value>
                <fullName>Hard H1</fullName>
            </value>
            <value>
                <fullName>Hard H2</fullName>
            </value>
            <value>
                <fullName>Hard H3</fullName>
            </value>
            <value>
                <fullName>Hard H4</fullName>
            </value>
            <value>
                <fullName>Hard H5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>