force-app/main/default/objects/Internship__c/fields/InternshipStartDate__c.field-meta.xml
<CustomField>
    <fullName>InternshipStartDate__c</fullName>
    <label>InternshipStartDate</label>
    <type>Date</type>
</CustomField>