force-app/main/default/objects/Internship__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Block-1</fullName>
            </value>
            <value>
                <fullName>Block-2</fullName>
            </value>
            <value>
                <fullName>Block-3</fullName>
            </value>
            <value>
                <fullName>Block-4</fullName>
            </value>
            <value>
                <fullName>Block-5</fullName>
            </value>
            <value>
                <fullName>Block-6</fullName>
            </value>
            <value>
                <fullName>Block-7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>