force-app/main/default/objects/Internship__c/fields/Opennings__c.field-meta.xml
<CustomField>
    <fullName>Opennings__c</fullName>
    <label>Opennings Left</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>