force-app/main/default/objects/Internship__c/fields/PostedBy__c.field-meta.xml
<CustomField>
    <fullName>PostedBy__c</fullName>
    <label>PostedBy</label>
    <length>90</length>
    <type>Text</type>
</CustomField>