force-app/main/default/objects/Internship__c/fields/RequiredSkills__c.field-meta.xml
<CustomField>
    <fullName>RequiredSkills__c</fullName>
    <label>RequiredSkills</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>