force-app/main/default/objects/Internship__c/fields/RoleDescription__c.field-meta.xml
<CustomField>
    <fullName>RoleDescription__c</fullName>
    <label>RoleDescription</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>