force-app/main/default/objects/Internship__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opened</fullName>
                <color>#009900</color>
                <default>true</default>
                <label>Opened</label>
            </value>
            <value>
                <fullName>Closed</fullName>
                <color>#FF0000</color>
                <label>Closed</label>
            </value>
            <value>
                <fullName>Pending</fullName>
                <isActive>false</isActive>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Selected</fullName>
                <isActive>false</isActive>
                <label>Selected</label>
            </value>
            <value>
                <fullName>Viewed</fullName>
                <isActive>false</isActive>
                <label>Viewed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>