force-app/main/default/objects/Internship__c/fields/WorkingArea__c.field-meta.xml
<CustomField>
    <fullName>WorkingArea__c</fullName>
    <label>WorkingArea</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Chorus</fullName>
            </value>
            <value>
                <fullName>Freshers</fullName>
            </value>
            <value>
                <fullName>Lab</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Paper Publication</fullName>
            </value>
            <value>
                <fullName>Printing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>