force-app/main/default/objects/Internship__c/fields/WorkingHours__c.field-meta.xml
<CustomField>
    <fullName>WorkingHours__c</fullName>
    <label>WorkingHours</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 hours</fullName>
            </value>
            <value>
                <fullName>2 hours</fullName>
            </value>
            <value>
                <fullName>3 hours</fullName>
            </value>
            <value>
                <fullName>4 hours</fullName>
            </value>
            <value>
                <fullName>5 hours</fullName>
            </value>
            <value>
                <fullName>6 hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>