force-app/main/default/objects/Internship__c/recordTypes/Experience_Layout.recordType-meta.xml
<RecordType>
    <fullName>Experience_Layout</fullName>
    <active>true</active>
    <label>Experience Layout</label>
</RecordType>