force-app/main/default/objects/Internship__c/recordTypes/Fresher_Layout.recordType-meta.xml
<RecordType>
    <fullName>Fresher_Layout</fullName>
    <active>true</active>
    <label>Fresher Layout</label>
</RecordType>