force-app/main/default/objects/Internship__c/validationRules/EndDate_Should_Be_Greater_Than_StartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>EndDate_Should_Be_Greater_Than_StartDate</fullName>
    <active>true</active>
    <errorConditionFormula>InternshipEndDate__c &lt;  InternshipStartDate__c</errorConditionFormula>
    <errorMessage>Internship Start Date can&apos;t be ahead of Internship End Date</errorMessage>
</ValidationRule>