force-app/main/default/objects/Internship__c/validationRules/StartDateShouldBeGreaterThanEndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>StartDateShouldBeGreaterThanEndDate</fullName>
    <active>true</active>
    <errorConditionFormula>InternshipStartDate__c &lt;  InternshipApplicationDeadline__c</errorConditionFormula>
    <errorMessage>Deadline of Internship can&apos;t be ahead of Internship Start Date</errorMessage>
</ValidationRule>